# timetables-parser-optivum

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
timetables/parser/optivum/: __init__.py  cli.py  parser.py  utils.py
